# pulchritude-engine

./: .gitignore  .gitmodules  .rgignore  CMakeLists.txt  LICENSE  README.md  TODO.md  build.sh  custom-vim.lua  vim.custom
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: cmake.yml
application/: CMakeLists.txt
application/src/: source.cpp
bindings/json/: bindings.json
bindings/zig/: bindings.zig  pulchritude.zig
documentation/: allocator.md  array.md  asset-font.md  asset-image.md  asset-model.md  asset-pds.md  asset-render-graph.md  asset-script-task-graph.md  asset-shader-module.md  becs.md  camera.md  core.md  data-serializer.md  ecs-serializer.md  ecs.md  engine-language.md  error.md  file.md  gfx-debug.md  gpu-ir.md  gpu.md  imgui-engine.md  imgui.md  log.md  math.md  mt.md  net.md  parser.md  physx.md  platform.md  plugin.md  render-graph.md  scene.md  script.md  shape.md  stream.md  string.md  task-graph.md  text.md  time.md  (+1 more)
editor/: CMakeLists.txt
editor/src/: source.cpp
engine/application/: CMakeLists.txt
engine/application/src/: source.cpp
puledit/: CMakeLists.txt
puledit/src/: source.cpp
scripts/: c-ecs-components-from-json-binding-generator.py  c-layer-from-json-binding-generator.py  compile-engine-shaders.py  generate-bindings.py  generate-default-layer.py  json-binding-generator.py  json-to-pds.py  lua-from-json-binding-generator.py  nim-from-json-binding-generator.py  zig-from-json-binding-generator.py
shaders/: debug-gfx-line.frag  debug-gfx-line.vert  debug-gfx-tri.frag  debug-gfx-tri.vert  imgui.frag  imgui.vert  material-default.frag  material-default.vert  text-bitmap.frag  text-bitmap.vert
skeleton/: README.md  pulchritude-allocator.pel  pulchritude-array.pel  pulchritude-asset-font.pel  pulchritude-asset-image.pel  pulchritude-asset-model.pel  pulchritude-asset-pds.pel  pulchritude-asset-render-graph.pel  pulchritude-asset-script-task-graph.pel  pulchritude-asset-shader-module.pel  pulchritude-becs.pel  pulchritude-camera.pel  pulchritude-core.pel  pulchritude-data-serializer.pel  pulchritude-ecs-serializer.pel  pulchritude-ecs.pel  pulchritude-engine-language.pel  pulchritude-error.pel  pulchritude-file.pel  pulchritude-gfx-debug.pel  pulchritude-gpu-ir.pel  pulchritude-gpu.pel  pulchritude-imgui-engine.pel  pulchritude-imgui.pel  pulchritude-log.pel  pulchritude-math.pel  pulchritude-mt.pel  pulchritude-net.pel  pulchritude-parser.pel  pulchritude-physx.pel  pulchritude-platform.pel  pulchritude-plugin.pel  pulchritude-render-graph.pel  pulchritude-scene.pel  pulchritude-script.pel  pulchritude-shape.pel  pulchritude-stream.pel  pulchritude-string.pel  pulchritude-task-graph.pel  pulchritude-text.pel  (+2 more)
util/: README.md
util/binding-generator/: .gdb_history  .gitignore  custom-vim.lua
util/binding-generator/assets/: project.pds
util/binding-generator/src/: binding-generator.cpp  binding-generator.hpp  generate-binding-c.cpp  generate-binding-cpp.cpp  generate-binding-markdown.cpp  generate-binding-stdout.cpp
